[tool.poetry]
name = "hector"
version = "0.1.0"
description = "A code quality & coverage analytics toolkit"
authors = ["0xlakshay"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
hector = "hector.cli:core_typer"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.33.0"
typer = {extras = ["all"], version = "^0.19"}
diff-cover = "8.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
]
ignore = [
    "E203",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"
